--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
             <div class="card-group">
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Logarithm calculator</h5>
-                        <a href="logar.html" class="btn btn-outline-light mt-2">Go &raquo;</a>
+                        <h5 class="card-title">Protein to DNA/RNA Translator</h5>
+                        <a href="proteintodnarna.html" class="btn btn-outline-light mt-2">Go &raquo;</a>
                     </div>
                 </div>
                 <div class="card">
                     <div class="card-body">
-                        <h5 class="card-title">Trigonometric calculator</h5>
-                        <a href="trigcalculator.html" class="btn btn-outline-light mt-2">Go &raquo;</a>
+                        <h5 class="card-title">Neutralization Reaction Calculator</h5>
+                        <a href="neutralization.html" class="btn btn-outline-light mt-2">Go &raquo;</a>
                     </div>
                 </div>
                 <div class="card">
