--- a/proteintodnarna.html
+++ b/proteintodnarna.html
@@ -51,7 +51,8 @@
         <form autocomplete="off" spellcheck="false">
             <div class="center-form">
                 <select class="form-select center-form" id="select">
-                    <option value="DNA">DNA coding output sequence</option>
+                    <option value="DNAcod">DNA coding output sequence</option>
+                    <option value="DNAtempl">DNA template output sequence</option>
                     <option value="RNA">mRNA output sequence</option>
                 </select>
             </div>
