fix: minor change

--- a/punnettsquare.html
+++ b/punnettsquare.html
@@ -72,7 +72,7 @@
             </div>
         </form>
         <br />
-        <p>A: Dominant allele | a: Recessive alleles</p>
+        <p>A: Dominant allele | a: Recessive allele</p>
         <div id="table-container">
             <table class="table table-bordered text-white mx-auto" style="cursor: crosshair;">
                 <thead>
