fix: major mbio changes

--- a/geneexpression.html
+++ b/geneexpression.html
@@ -65,6 +65,10 @@
                 <a href="https://duckduckgo.com/?q=expression+of+genetic+information " target="_blank" rel="noopener"
                     class="btn btn-outline-light">Find information on the web</a>
             </div>
+            <p class="p-0 m-0"><span class="text-warning">X</span> means that a character you entered in the sequence is
+                not
+                valid.</p>
+            <p class="my-3 px-3"><span class="text-success">*</span> means stop codon</p>
         </form>
         <table class="table table-bordered text-white mx-auto" style="cursor: crosshair;">
             <thead>
