--- a/proteincontent.html
+++ b/proteincontent.html
@@ -75,122 +75,12 @@
                 <table class="table table-bordered text-white mx-auto" style="cursor: crosshair;">
                     <thead>
                         <tr>
-                            <th width="30%">Amino Acid</th>
-                            <th width="35%">Count</th>
-                            <th width="35%">&#37;</th>
+                            <th width="33%">Amino Acid</th>
+                            <th width="33%">Count</th>
+                            <th width="33%">&#37;</th>
                         </tr>
                     </thead>
-                    <tbody>
-                        <tr>
-                            <td>F</td>
-                            <td id="f_count"></td>
-                            <td id="f_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>L</td>
-                            <td id="l_count"></td>
-                            <td id="l_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>I</td>
-                            <td id="i_count"></td>
-                            <td id="i_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>V</td>
-                            <td id="v_count"></td>
-                            <td id="v_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>M</td>
-                            <td id="m_count"></td>
-                            <td id="m_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>S</td>
-                            <td id="s_count"></td>
-                            <td id="s_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>P</td>
-                            <td id="p_count"></td>
-                            <td id="p_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>T</td>
-                            <td id="t_count"></td>
-                            <td id="t_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>A</td>
-                            <td id="a_count"></td>
-                            <td id="a_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>Y</td>
-                            <td id="y_count"></td>
-                            <td id="y_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>H</td>
-                            <td id="h_count"></td>
-                            <td id="h_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>N</td>
-                            <td id="n_count"></td>
-                            <td id="n_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>D</td>
-                            <td id="d_count"></td>
-                            <td id="d_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>Q</td>
-                            <td id="q_count"></td>
-                            <td id="q_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>K</td>
-                            <td id="k_count"></td>
-                            <td id="k_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>E</td>
-                            <td id="e_count"></td>
-                            <td id="e_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>C</td>
-                            <td id="c_count"></td>
-                            <td id="c_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>R</td>
-                            <td id="r_count"></td>
-                            <td id="r_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>G</td>
-                            <td id="g_count"></td>
-                            <td id="g_perc"></td>
-                        </tr>
-                        <tr>
-                            <td>W</td>
-                            <td id="w_count"></td>
-                            <td id="w_perc"></td>
-                        </tr>
-                        <tr>
-                            <td><span class="text-success">*</span> (stop codon)</td>
-                            <td id="end_count"></td>
-                            <td id="end_perc"></td>
-                        </tr>
-                        <tr>
-                            <td><span class="text-warning">X</span> (invalid character)</td>
-                            <td id="x_count"></td>
-                            <td id="x_perc"></td>
-                        </tr>
+                    <tbody id="tablebody">
                     </tbody>
                 </table>
             </div>
