fix: minor changes

--- a/geneexpression.html
+++ b/geneexpression.html
@@ -59,7 +59,7 @@
             </div>
             <br />
             <div class="btn-group">
-                <input type="submit" id="expressioncalc" class="btn btn-success btn-lg" value="Express">
+                <input type="submit" id="expressioncalc" class="btn btn-success btn-lg" value="Generate">
             </div>
             <div class="my-4">
                 <a href="https://duckduckgo.com/?q=expression+of+genetic+information " target="_blank" rel="noopener"
@@ -68,7 +68,7 @@
             <p class="p-0 m-0"><span class="text-warning">X</span> means that a character you entered in the sequence is
                 not
                 valid.</p>
-            <p class="my-3 px-3"><span class="text-success">*</span> means stop codon</p>
+            <p class="mb-3 mt-1"><span class="text-success">*</span> means stop codon</p>
         </form>
         <table class="table table-bordered text-white mx-auto" style="cursor: crosshair;">
             <thead>
