fix: fixed word wrapping issue

--- a/geneexpression.html
+++ b/geneexpression.html
@@ -86,19 +86,19 @@
             <tbody>
                 <tr>
                     <th width="35%">Protein</th>
-                    <td id="protein-out"></td>
+                    <td id="protein-out" style="word-break: break-all;" class="text-success"></td>
                 </tr>
                 <tr>
                     <th width="35%">DNA Strand</th>
-                    <td id="dna-out"></td>
+                    <td id="dna-out" style="word-break: break-all;" class="text-success"></td>
                 </tr>
                 <tr>
                     <th width="35%">mRNA Strand</th>
-                    <td id="mrna-out"></td>
+                    <td id="mrna-out" style="word-break: break-all;" class="text-success"></td>
                 </tr>
                 <tr>
                     <th width="35%">tRNA Anticodons</th>
-                    <td id="trna-out"></td>
+                    <td id="trna-out" style="word-break: break-all;" class="text-success"></td>
                 </tr>
             </tbody>
         </table>
