fix: minor changes

--- a/geneexpression.html
+++ b/geneexpression.html
@@ -89,7 +89,7 @@
                     <td id="protein-out" style="word-break: break-all;" class="text-success"></td>
                 </tr>
                 <tr>
-                    <th width="35%">DNA Strand</th>
+                    <th width="35%">DNA Coding Strand</th>
                     <td id="dna-out" style="word-break: break-all;" class="text-success"></td>
                 </tr>
                 <tr>
