--- a/proteincontent.html
+++ b/proteincontent.html
@@ -52,8 +52,8 @@
             <div class="center-form">
                 <select class="form-select center-form" id="select">
                     <option value="Protein">Protein sequence</option>
-                    <option value="DNA">DNA sequence</option>
-                    <option value="RNA">RNA sequence</option>
+                    <option value="DNA">DNA Template Strand sequence</option>
+                    <option value="RNA">mRNA sequence</option>
                 </select>
             </div>
             <br />
