fix: minor change

--- a/proteincontent.html
+++ b/proteincontent.html
@@ -52,7 +52,8 @@
             <div class="center-form">
                 <select class="form-select center-form" id="select">
                     <option value="Protein">Protein sequence</option>
-                    <option value="DNA">DNA Template Strand sequence</option>
+                    <option value="DNAtemp">DNA Template Strand sequence</option>
+                    <option value="DNAcod">DNA Coding Strand sequence</option>
                     <option value="RNA">mRNA sequence</option>
                 </select>
             </div>
